# lsi_tcp

./: .gitignore  README.md  example_open_loop.py  example_proportional.py  pyproject.toml  requirements.txt  tclab_system.py
lsi_tcp/: PController.md  __init__.py  base_controller.py  controllers_dashboard.py  linee_guida_controllore.md  manual_controller.py  proportional_controller.py  setpoint_profile.py  tclab_system.py  utils.py
tclab/: pyvenv.cfg
